Add Json Scehma checking in the project
Add Json Scehma checking in the project

--- a/MI9Project.Tests/TestSrc.resx
+++ b/MI9Project.Tests/TestSrc.resx
@@ -122,7 +122,31 @@
     "error": "Could not decode request: JSON parsing failed"
 }</value>
   </data>
-  <data name="MI9BadRequest" xml:space="preserve">
+  <data name="MI9BadRequestForIncompitableJSON" xml:space="preserve">
+    <value>{
+    "glossary": {
+        "title": "example glossary",
+		"GlossDiv": {
+            "title": "S",
+			"GlossList": {
+                "GlossEntry": {
+                    "ID": "SGML",
+					"SortAs": "SGML",
+					"GlossTerm": "Standard Generalized Markup Language",
+					"Acronym": "SGML",
+					"Abbrev": "ISO 8879:1986",
+					"GlossDef": {
+                        "para": "A meta-markup language, used to create markup languages such as DocBook.",
+						"GlossSeeAlso": ["GML", "XML"]
+                    },
+					"GlossSee": "markup"
+                }
+            }
+        }
+    }
+}</value>
+  </data>
+  <data name="MI9BadRequestForInvalidFormatJSON" xml:space="preserve">
     <value>{
     "payload": [
         {
